<resources>
  <string name="app_name">Pooni</string>
  <string name="home_start">학습 시작</string>
  <string name="home_quick">빠른 시작</string>

  <!-- home_setting -->
  <string name="button_setting">설정</string>
  <string name="setting_title">학습 세팅</string>
  <string name="setting_name">문제집 이름</string>
  <string name="setting_totime">문제 풀이시간</string>
  <string name="setting_maxtime">문제당 최대 시간</string>
  <string name="setting_count">(옵션)총 문제 개수</string>
  <string name="setting_rest">(옵션)쉬는 시간 기입</string>
  <string name="hint_min">분단위로 입력 </string>
  <string name="hint_second">초단위로 입력</string>
  <!-- setting_prefill -->
  <string name="name_prefill">ibk_ncs2018</string>
  <string name="maxtime_prefill">분 단위 입력</string>
  <string name="maxcount_prefill">개수 입력</string>
  <string name="rest_prefill">쉬는 시간 있을시, 간격을 입력하세요.</string>

  <!-- activity_lab_start -->
  <string name="lab_init">00:00:00</string>유
  <string name="lab_title">기록</string>
  <string name="lab_start">시작</string>
  <string name="lab_record">기록</string>
  <string name="lab_reset">리셋</string>
  <string name="lab_del">삭제</string>
  <string name="lab_done">풀이 끝</string>
  <string name="todo">TODO</string>

  <!-- activity_lab_done -->
  <string name="save">저장</string>
  <string name="share">공유</string>

  <!-- activity_setting -->
  <string name="setting_book">문제집 설정</string>
  <string name="setting_hisotry">기록 보기</string>
  <!-- warnings -->
  <string name="cancel_record">저장되지 않은 Lap 기록이 있습니다. 중지할까요?</string>
  <string name="msg_back">한번 더 뒤로가기 누르면 종료</string>
  <string name="saveAfteraccum">기록을 누적하고 새로운 설정은 저장합니다.</string>
  <!-- noraml notification -->
  <string name="agree">확인</string>
  <string name="disagree">취소</string>
  <string name="moreinfo">더보기</string>
  <string name="exit_lab">Lap 종료</string>
  <string name="notSet">NUll</string>

  <!-- fragment string tag -->
  <string name="TAG_HOME">tag_home</string>
  <string name="TAG_LAB">tag_lab</string>
  <string name="TAG_SAVESHARE">TAG_saveshare</string>
  <string name="TAG_SETLOG">tag_setlog</string>

  <!-- personal_setting_book -->
  <string name="empty">-</string>
</resources>
