<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_mybook"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/setting_title"
        android:textColor="#80000000"
        android:textSize="@dimen/setting_tile"/>
    <EditText
        android:id="@+id/setting_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/setting_totime"
        android:textColor="#80000000"
        android:textSize="@dimen/setting_tile"/>
    <EditText
        android:id="@+id/setting_totime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/setting_maxtime"
        android:textColor="#80000000"
        android:textSize="@dimen/setting_tile"/>
    <EditText
        android:id="@+id/setting_maxtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/setting_rest"
        android:textColor="#80000000"
        android:textSize="@dimen/setting_tile"/>
    <EditText
        android:id="@+id/setting_rest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/setting_count"
        android:textColor="#80000000"
        android:textSize="@dimen/setting_tile"/>
    <EditText
        android:id="@+id/setting_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>